--- a/website-naissance/src/index.css
+++ b/website-naissance/src/index.css
@@ -1,3 +1,35 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+@layer base {
+
+    label{
+        @apply font-medium w-full text-gray-700 block
+    }
+    .form-field{
+        @apply mt-3
+    }
+
+    input[type='text'],
+    input[type='password'],
+    input[type='email'],
+    input[type='number'],
+    input[type='url'],
+    input[type='date'],
+    input[type='datetime-local'],
+    input[type='month'],
+    input[type='week'],
+    input[type='time'],
+    input[type='search'],
+    input[type='tel'],
+    input[type='checkbox'],
+    input[type='radio'],
+    select,
+    select[multiple]
+    textarea{
+        @apply border border-gray-100 rounded-lg w-full focus:border-blue-500
+    }
+   
+}
