--- a/website-naissance/src/index.css
+++ b/website-naissance/src/index.css
@@ -6,11 +6,13 @@
   label {
     @apply font-medium w-full text-gray-700 block;
   }
+
   .form-field {
     @apply mt-3;
   }
+
   button[type="submit"] {
-    @apply block  my-2 py-2 bg-blue-600 text-white text-center hover:bg-blue-800 w-full rounded-lg;
+    @apply block my-2 py-2 bg-blue-600 text-white text-center hover:bg-blue-800 w-full rounded-lg;
   }
 
   input[type="text"],
@@ -28,7 +30,7 @@
   input[type="checkbox"],
   input[type="radio"],
   select,
-  select[multiple] textarea {
+  select[multiple], textarea {
     @apply border border-gray-100 rounded-lg w-full focus:border-blue-500;
   }
 }
